crates/swc_ecma_parser/tests/test262-error-references/fail/036f6b8da7e53ee5.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/036f6b8da7e53ee5.js:1:6
  |
1 | ({get 
  |      ^

